--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div>Jobs</div>
             </a>
 
-            <hr style="width: 6vmin; transform: rotate(90deg);">
+            <hr class='hr' style="width: 6vmin; transform: rotate(90deg);">
             </hr>
             <div id="joinnow">Join now</div>
             <button id="signup">Sign up</button>
