--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             </div>
         </div>
-        <div class="scroller">
+         <!-- <div class="scroller">
             <span class="scroll">
                 <i class='fas fa-chevron-left' style='font-size:3vmin'></i>
                 <span>Previous</span>
@@ -144,7 +144,7 @@
                 <i class='fas fa-chevron-right' style='font-size:3vmin'></i>
             </span>
         </div>
-        <!-- 
+       
         <div class="row r5 d-none">
             <div class="col r5c1">
                 <div id="let">
